[package]
name = "zygisk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bitflags = "^2.6"
crc = "3.2.1"
dobby-rs = "0.1.0"
jni = "^0.21"
jni-sys = "^0.4"
log = "^0.4"
nix = { version = "^0.29", features = ["fs", "process"] }
rsprocmaps = "0.3.2"
zygisk-rs = { git = "https://github.com/Kr328/zygisk-rs", default-features = false, features = ["v4"]}

[lib]
name = "zygisk"
crate-type = ["dylib"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "^0.14"
nix = "^0.29"

[profile.release]
strip = "symbols"
opt-level = 3
debug = 0
debug-assertions = false
lto = "fat"
incremental = false
codegen-units = 1
